--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -29,7 +30,9 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.28",
+    "husky": "^9.1.7",
     "install": "^0.13.0",
+    "lint-staged": "^15.5.2",
     "npm": "^11.3.0",
     "postcss": "^8",
     "prettier": "^3.5.3",
