--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
@@ -20,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
     "next": "14.2.28",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
